fixed location alert overflow

--- a/OpenStreetMap/files/osmp_style.css
+++ b/OpenStreetMap/files/osmp_style.css
@@ -24,7 +24,6 @@
 
 #location_bounds_alert{
     opacity: 0;
-    height: 20px;
     background-color:#FFCDD2;
 }
 
